[tool.poetry]
name = "math-series"
version = "0.1.0"
description = ""
authors = ["bjgman12 <bjgman38@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.1.2"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
